[#27]  Add Summoner Search , Swagger Openapi Update
